--- a/MediaExtractor/MainWindow.xaml
+++ b/MediaExtractor/MainWindow.xaml
@@ -8,7 +8,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" MinWidth="620" MinHeight="300">
     <Grid UseLayoutRounding="False" Margin="0,26,0,0">
-        <Menu Height="26" Margin="0,-26,0,0" VerticalAlignment="Top">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="335*"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="452*"/>
+        </Grid.ColumnDefinitions>
+        <Menu Height="26" Margin="0,-26,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3">
             <MenuItem Header="File">
                 <MenuItem x:Name="openFileMenuItem" Header="Open File" Click="openFileMenuItem_Click" />
                 <MenuItem x:Name="saveFileMenuItem" Header="Save File" Click="saveFileMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=saveFileButton}" />
@@ -17,7 +22,7 @@
                 <MenuItem x:Name="quitMenuItem" Header="Quit" Click="quitMenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="Filter">
-                <MenuItem x:Name="imageFilterMenuItem" Header="Images" IsChecked="True" IsCheckable="True" Checked="imageFilterMenuItem_Checked" Unchecked="imageFilterMenuItem_Unchecked" />
+                <MenuItem x:Name="imageFilterMenuItem" Header="EmbeddedFiles" IsChecked="True" IsCheckable="True" Checked="imageFilterMenuItem_Checked" Unchecked="imageFilterMenuItem_Unchecked" />
                 <MenuItem x:Name="otherFilterMenuItem" Header="Other" IsCheckable="True" Checked="otherFilterMenuItem_Checked" Unchecked="otherFilterMenuItem_Unchecked" />
                 <Separator/>
                 <MenuItem x:Name="keepFolderStructureMenuItem" IsChecked="{Binding Path=KeepFolderStructure}" Header="Keep Folder Structure" IsCheckable="True" />
@@ -27,24 +32,25 @@
             </MenuItem>
         </Menu>
         <Grid Margin="0,0,0,35
-              ">
+              " Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="340"/>
                 <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" MinWidth="300"/>
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Column="0">
                 <Button x:Name="OpenFileButton" Content="Open File" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="94" Click="OpenFileButton_Click"/>
-                <Label Content="Path" Margin="10,37,2,0" VerticalAlignment="Top"/>
-                <TextBox Text="{Binding Path=FileName, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="pathField" Height="23" Margin="10,63,2,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                <Label Content="Source File Path" Margin="10,37,2,0" VerticalAlignment="Top"/>
+                <TextBox Text="{Binding Path=FileName, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="pathField" Height="23" Margin="10,63,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
                 <Label Content="Embedded Files" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
                 <ListView x:Name="imagesListView" Margin="10,122,10,10" ItemsSource="{Binding Path=ListViewItems}" SelectionChanged="ListView_SelectionChanged">
                     <ListView.View>
                         <GridView>
                             <GridView.Columns>
-                                <GridViewColumn Header="Filename" Width="210" DisplayMemberBinding="{Binding Path=FileName}"/>
-                                <GridViewColumn Header="Extension" Width="60" DisplayMemberBinding="{Binding Path=FileExtension}"/>
+                                <GridViewColumn Header="Filename (Embedded)" Width="160" DisplayMemberBinding="{Binding Path=FileName}"/>
+                                <GridViewColumn Header="Ext." Width="40" DisplayMemberBinding="{Binding Path=FileExtension}"/>
+                                <GridViewColumn Header="Relative Path" Width="100" DisplayMemberBinding="{Binding Path=Path}"/>
                             </GridView.Columns>
                         </GridView>
                     </ListView.View>
@@ -52,18 +58,20 @@
 
             </Grid>
             <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
-            <Grid Grid.Column="2">
+            <Grid Grid.Column="2" MinWidth="300">
                 <Border  Margin="0,37,0,0" Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
                     <Viewbox x:Name="imageBoxContainer" Margin="10" ClipToBounds="True">
                         <Image x:Name="imageBox" />
                     </Viewbox>
                 </Border>
+                <TextBox x:Name="textBox" Margin="5,42,5,5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Visibility="Hidden" Padding="5,5,3,5" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
                 <Button x:Name="saveFileButton" Content="Save File" Margin="0,10,10,0" VerticalAlignment="Top" Width="103" IsEnabled="{Binding Path=SaveStatus}" HorizontalAlignment="Right" Click="saveFileButton_Click"/>
                 <Button x:Name="saveAllFilesButton" Content="Save all Files" Margin="0,10,123,0" VerticalAlignment="Top" Width="100" IsEnabled="{Binding Path=SaveAllStatus}" HorizontalAlignment="Right" Click="saveAllFilesButton_Click"/>
                 <Label Content="Preview" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" Width="59" FontWeight="Bold"/>
+                
             </Grid>
         </Grid>
-        <StatusBar Height="35" VerticalAlignment="Bottom">
+        <StatusBar Height="35" VerticalAlignment="Bottom" Grid.ColumnSpan="3">
             <StatusBarItem HorizontalAlignment="Left">
                 <Label x:Name="statusLabel" Content="{Binding Path=StatusText}" HorizontalContentAlignment="Stretch" Height="35" HorizontalAlignment="Left" Margin="5,0"/>
             </StatusBarItem>
