--- a/MediaExtractor/ExistingFileDialog.xaml
+++ b/MediaExtractor/ExistingFileDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MediaExtractor.ExistingFileDialog"
+﻿<Window x:Uid="Window_1" xml:lang="en-US" x:Class="MediaExtractor.ExistingFileDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,58 +6,58 @@
         xmlns:local="clr-namespace:MediaExtractor"
         mc:Ignorable="d"
         Title="File already exists..." Height="197.49" Width="528.796" ResizeMode="NoResize" Icon="media/media_extractor.ico" WindowStartupLocation="CenterOwner" Topmost="True" Closing="Window_Closing">
-    <Grid>
-        <TextBox x:Name="infoBox" HorizontalAlignment="Left" Height="80" Margin="67,89,0,0" TextWrapping="Wrap" Text="CRC32 (cyclic redundancy check) is a simple hashing method to compare whether data or files are identical. However, CRC does not provide a 100% guarantee that two files are identical. But it is a strong evidence if the size of both files are the same and no malicious tampering is to be expected." VerticalAlignment="Top" Width="417" Panel.ZIndex="99" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Visibility="Hidden"/>
-        <Grid HorizontalAlignment="Left" Height="69" Margin="0,100,0,0" VerticalAlignment="Top" Width="523" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
-            <Button x:Name="overwriteButton" Content="Overwrite" HorizontalAlignment="Left" Margin="12,10,0,0" VerticalAlignment="Top" Width="75" ToolTip="Overwrite existing File" Click="overwriteButton_Click"/>
-            <Button x:Name="skipButton" Content="Skip" HorizontalAlignment="Left" Margin="92,10,0,0" VerticalAlignment="Top" Width="75" ToolTip=" Skip Extraction of the new File" Click="skipButton_Click"/>
-            <Button x:Name="renameButton" Content="Rename new File" HorizontalAlignment="Left" Margin="172,10,0,0" VerticalAlignment="Top" Width="100" ToolTip="Rename new File" Click="renameButton_Click"/>
-            <Button x:Name="cancelButton" Content="Cancel Extraction " HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="104" ToolTip="Camcel Extraction" Click="cancelButton_Click"/>
-            <CheckBox x:Name="rememberCheckbox" Content="Remember Decision" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+    <Grid x:Uid="Grid_1">
+        <TextBox x:Uid="infoBox" x:Name="infoBox" HorizontalAlignment="Left" Height="80" Margin="67,89,0,0" TextWrapping="Wrap" Text="CRC32 (cyclic redundancy check) is a simple hashing method to compare whether data or files are identical. However, CRC does not provide a 100% guarantee that two files are identical. But it is a strong evidence if the size of both files are the same and no malicious tampering is to be expected." VerticalAlignment="Top" Width="417" Panel.ZIndex="99" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Visibility="Hidden"/>
+        <Grid x:Uid="Grid_2" HorizontalAlignment="Left" Height="69" Margin="0,100,0,0" VerticalAlignment="Top" Width="523" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+            <Button x:Uid="overwriteButton" x:Name="overwriteButton" Content="Overwrite" HorizontalAlignment="Left" Margin="12,10,0,0" VerticalAlignment="Top" Width="75" ToolTip="Overwrite existing File" Click="overwriteButton_Click"/>
+            <Button x:Uid="skipButton" x:Name="skipButton" Content="Skip" HorizontalAlignment="Left" Margin="92,10,0,0" VerticalAlignment="Top" Width="75" ToolTip=" Skip Extraction of the new File" Click="skipButton_Click"/>
+            <Button x:Uid="renameButton" x:Name="renameButton" Content="Rename new File" HorizontalAlignment="Left" Margin="172,10,0,0" VerticalAlignment="Top" Width="100" ToolTip="Rename new File" Click="renameButton_Click"/>
+            <Button x:Uid="cancelButton" x:Name="cancelButton" Content="Cancel Extraction " HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="104" ToolTip="Cancel Extraction" Click="cancelButton_Click"/>
+            <CheckBox x:Uid="rememberCheckbox" x:Name="rememberCheckbox" Content="Remember Decision" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
 
         </Grid>
-        <Grid HorizontalAlignment="Left" Height="100
+        <Grid x:Uid="Grid_3" HorizontalAlignment="Left" Height="100
               " VerticalAlignment="Top" Width="523">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="70"/>
-                <ColumnDefinition Width="3"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="3"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_1" Width="70"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_2" Width="3"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_3" Width="*"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_4" Width="3"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_5" Width="*"/>
 
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="25" />
-                <RowDefinition Height="*" />
+                <RowDefinition x:Uid="RowDefinition_1" Height="25" />
+                <RowDefinition x:Uid="RowDefinition_2" Height="*" />
             </Grid.RowDefinitions>
-            <Grid Grid.Column="1" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.RowSpan="2"/>
-            <Grid Grid.Column="3" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.RowSpan="2"/>
-            <Grid Grid.Column="2" Grid.ColumnSpan="2">
-                <Label HorizontalContentAlignment="Center" Padding="5,2" FontWeight="Bold">Existing File</Label>
+            <Grid x:Uid="Grid_4" Grid.Column="1" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.RowSpan="2"/>
+            <Grid x:Uid="Grid_5" Grid.Column="3" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.RowSpan="2"/>
+            <Grid x:Uid="Grid_6" Grid.Column="2" Grid.ColumnSpan="2">
+                <Label x:Uid="Label_1" HorizontalContentAlignment="Center" Padding="5,2" FontWeight="Bold">Existing File</Label>
             </Grid>
-            <Grid Grid.Column="3" Grid.ColumnSpan="2">
-                <Label HorizontalContentAlignment="Center" Padding="5,2" FontWeight="Bold">New File to Extract</Label>
+            <Grid x:Uid="Grid_7" Grid.Column="3" Grid.ColumnSpan="2">
+                <Label x:Uid="Label_2" HorizontalContentAlignment="Center" Padding="5,2" FontWeight="Bold">New File to Extract</Label>
             </Grid>
-            <StackPanel Grid.Column="0" Grid.Row="1">
-                <Label Padding="5,1">Name:</Label>
-                <Label Padding="5,1">Date:</Label>
-                <Label Padding="5,1">Size:</Label>
-                <StackPanel Orientation="Horizontal">
-                    <Label Padding="5,1">CRC32:</Label>
-                    <Image x:Name="infoImage" Source="media/infoIcon.png" Width="15" MouseEnter="infoImage_MouseEnter" MouseLeave="infoImage_MouseLeave"  />
+            <StackPanel x:Uid="StackPanel_1" Grid.Column="0" Grid.Row="1">
+                <Label x:Uid="Label_3" Padding="5,1">Name:</Label>
+                <Label x:Uid="Label_4" Padding="5,1">Date:</Label>
+                <Label x:Uid="Label_5" Padding="5,1">Size:</Label>
+                <StackPanel x:Uid="StackPanel_2" Orientation="Horizontal">
+                    <Label x:Uid="Label_6" Padding="5,1">CRC32:</Label>
+                    <Image x:Uid="infoImage" x:Name="infoImage" Source="media/infoIcon.png" Width="15" MouseEnter="infoImage_MouseEnter" MouseLeave="infoImage_MouseLeave"  />
                 </StackPanel>
             </StackPanel>
-            <StackPanel Grid.Column="2" Grid.Row="1">
-                <Label x:Name="existingNameLabel" Padding="5,1"></Label>
-                <Label x:Name="existingDateLabel" Padding="5,1"></Label>
-                <Label x:Name="exisitingSizeLabel" Padding="5,1"></Label>
-                <Label x:Name="exisitingCrcLabel" Padding="5,1"></Label>
+            <StackPanel x:Uid="StackPanel_3" Grid.Column="2" Grid.Row="1">
+                <Label x:Uid="existingNameLabel" x:Name="existingNameLabel" Padding="5,1"></Label>
+                <Label x:Uid="existingDateLabel" x:Name="existingDateLabel" Padding="5,1"></Label>
+                <Label x:Uid="exisitingSizeLabel" x:Name="exisitingSizeLabel" Padding="5,1"></Label>
+                <Label x:Uid="exisitingCrcLabel" x:Name="exisitingCrcLabel" Padding="5,1"></Label>
             </StackPanel>
-            <StackPanel Grid.Column="4" Grid.Row="1">
-                <Label x:Name="archiveNameLabel" Padding="5,1"></Label>
-                <Label x:Name="archiveDateLabel" Padding="5,1"></Label>
-                <Label x:Name="archiveSizeLabel" Padding="5,1"></Label>
-                <Label x:Name="archiveCrcLabel" Padding="5,1"></Label>
+            <StackPanel x:Uid="StackPanel_4" Grid.Column="4" Grid.Row="1">
+                <Label x:Uid="archiveNameLabel" x:Name="archiveNameLabel" Padding="5,1"></Label>
+                <Label x:Uid="archiveDateLabel" x:Name="archiveDateLabel" Padding="5,1"></Label>
+                <Label x:Uid="archiveSizeLabel" x:Name="archiveSizeLabel" Padding="5,1"></Label>
+                <Label x:Uid="archiveCrcLabel" x:Name="archiveCrcLabel" Padding="5,1"></Label>
             </StackPanel>
         </Grid>
 
