--- a/MediaExtractor/MainWindow.xaml
+++ b/MediaExtractor/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MediaExtractor.MainWindow"
+﻿<Window x:Uid="Window_1" xml:lang="en-US" x:Class="MediaExtractor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,77 +6,85 @@
         xmlns:local="clr-namespace:MediaExtractor"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" MinWidth="660" MinHeight="300" Icon="media/media_extractor.ico">
-    <Grid UseLayoutRounding="False" Margin="0,26,0,0">
+        Title="Media-Extractor" Height="600" Width="800" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" MinWidth="660" MinHeight="300" Icon="media/media_extractor.ico">
+    <Grid x:Uid="Grid_1" UseLayoutRounding="False" Margin="0,26,0,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="335*"/>
-            <ColumnDefinition Width="5*"/>
-            <ColumnDefinition Width="452*"/>
+            <ColumnDefinition x:Uid="ColumnDefinition_1" Width="335*"/>
+            <ColumnDefinition x:Uid="ColumnDefinition_2" Width="5*"/>
+            <ColumnDefinition x:Uid="ColumnDefinition_3" Width="452*"/>
         </Grid.ColumnDefinitions>
-        <Menu Height="26" Margin="0,-26,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3">
-            <MenuItem Header="File">
-                <MenuItem x:Name="openFileMenuItem" Header="Open File" Click="openFileMenuItem_Click" />
-                <MenuItem x:Name="saveFileMenuItem" Header="Save File" Click="saveFileMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=saveFileButton}" />
-                <MenuItem x:Name="saveAllFilesMenuItem" Header="Save all Files" Click="saveAllFilesMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=saveAllFilesButton}" />
-                <Separator/>
-                <MenuItem x:Name="quitMenuItem" Header="Quit" Click="quitMenuItem_Click"/>
+        <Menu x:Uid="Menu_1" Height="26" Margin="0,-26,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3">
+            <MenuItem x:Uid="MenuItem_1" Header="File">
+                <MenuItem x:Uid="openFileMenuItem" x:Name="openFileMenuItem" Header="Open File" Click="openFileMenuItem_Click" />
+                <MenuItem x:Uid="saveFileMenuItem" x:Name="saveFileMenuItem" Header="Save File" Click="saveFileMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=saveFileButton}" />
+                <MenuItem x:Uid="saveAllFilesMenuItem" x:Name="saveAllFilesMenuItem" Header="Save all Files" Click="saveAllFilesMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=saveAllFilesButton}" />
+                <Separator x:Uid="Separator_1"/>
+                <MenuItem x:Uid="quitMenuItem" x:Name="quitMenuItem" Header="Quit" Click="quitMenuItem_Click"/>
             </MenuItem>
-            <MenuItem Header="Options">
-                <MenuItem x:Name="imageFilterMenuItem" Header="Show Embedded Image Files" IsChecked="True" IsCheckable="True" Checked="imageFilterMenuItem_Checked" Unchecked="imageFilterMenuItem_Unchecked" />
-                <MenuItem x:Name="otherFilterMenuItem" Header="Show Other Embedded Files" IsCheckable="True" Checked="otherFilterMenuItem_Checked" Unchecked="otherFilterMenuItem_Unchecked" />
-                <Separator/>
-                <MenuItem x:Name="keepFolderStructureMenuItem" IsChecked="{Binding Path=KeepFolderStructure}" Header="Keep Folder Structure when Extracting" IsCheckable="True" />
-                <MenuItem x:Name="showInExplorarMenuItem" IsChecked="{Binding Path=ShowInExplorer}" Header="Show in Explorer after Extracting" IsCheckable="True" />
+            <MenuItem x:Uid="MenuItem_2" Header="Options">
+                <MenuItem x:Uid="languageMenuItem" x:Name="languageMenuItem" Header="Language">
+                    <MenuItem x:Uid="systemLanguageMenuItem" x:Name="systemLanguageMenuItem" Header="Use System Language" IsChecked="{Binding Path=LanguageSystem}" IsCheckable="True" />
+                    <Separator x:Uid="Separator_3"/>
+                    <MenuItem x:Uid="lnguage_en_us_MenuItem" x:Name="lnguage_en_us_MenuItem" Header="English" IsChecked="{Binding Path=LanguageEnglish}" IsCheckable="True" />
+                    <MenuItem x:Uid="lnguage_de_de_MenuItem" x:Name="lnguage_de_de_MenuItem" Header="German" IsChecked="{Binding Path=LanguageGerman}" IsCheckable="True" />
+                </MenuItem>
+                <MenuItem x:Uid="imageFilterMenuItem" x:Name="imageFilterMenuItem" Header="Show Embedded Image Files" IsChecked="True" IsCheckable="True" Checked="imageFilterMenuItem_Checked" Unchecked="imageFilterMenuItem_Unchecked" />
+                <MenuItem x:Uid="otherFilterMenuItem" x:Name="otherFilterMenuItem" Header="Show Other Embedded Files" IsCheckable="True" Checked="otherFilterMenuItem_Checked" Unchecked="otherFilterMenuItem_Unchecked" />
+                <Separator x:Uid="Separator_2"/>
+                <MenuItem x:Uid="keepFolderStructureMenuItem" x:Name="keepFolderStructureMenuItem" IsChecked="{Binding Path=KeepFolderStructure}" Header="Keep Folder Structure when Extracting" IsCheckable="True" />
+                <MenuItem x:Uid="showInExplorarMenuItem" x:Name="showInExplorarMenuItem" IsChecked="{Binding Path=ShowInExplorer}" Header="Show in Explorer after Extracting" IsCheckable="True" />
             </MenuItem>
-            <MenuItem Header="Help">
-                <MenuItem x:Name="aboutMenuItem" Header="About" Click="aboutMenuItem_Click"/>
+            <MenuItem x:Uid="MenuItem_3" Header="Help">
+                <MenuItem x:Uid="aboutMenuItem" x:Name="aboutMenuItem" Header="About" Click="aboutMenuItem_Click"/>
             </MenuItem>
         </Menu>
-        <Grid Margin="0,0,0,35" Grid.ColumnSpan="3">
+        <Grid x:Uid="Grid_2" Margin="0,0,0,35" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="340" MinWidth="110"/>
-                <ColumnDefinition Width="5" MinWidth="5" />
-                <ColumnDefinition Width="*" MinWidth="300"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_4" Width="340" MinWidth="110"/>
+                <ColumnDefinition x:Uid="ColumnDefinition_5" Width="5" MinWidth="5" />
+                <ColumnDefinition x:Uid="ColumnDefinition_6" Width="*" MinWidth="300"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
-                <Button x:Name="OpenFileButton" Content="Open File" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="94" Click="OpenFileButton_Click"/>
-                <Label Content="Source File Path" Margin="10,37,2,0" VerticalAlignment="Top"/>
-                <TextBox Text="{Binding Path=FileName, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="pathField" Height="23" Margin="10,63,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
-                <Label Content="Embedded Files" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
-                <ListView x:Name="imagesListView" Margin="10,122,10,10" ItemsSource="{Binding Path=ListViewItems}" SelectionChanged="ListView_SelectionChanged">
+            <Grid x:Uid="Grid_3" Grid.Column="0">
+                <Button x:Uid="OpenFileButton" x:Name="OpenFileButton" Content="Open File" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="OpenFileButton_Click" Padding="5,1"/>
+                <Label x:Uid="Label_1" Content="Source File Path" Margin="10,37,2,0" VerticalAlignment="Top"/>
+                <TextBox x:Uid="pathField" Text="{Binding Path=FileName, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" x:Name="pathField" Height="23" Margin="10,63,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                <Label x:Uid="Label_2" Content="Embedded Files" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
+                <ListView x:Uid="imagesListView" x:Name="imagesListView" Margin="10,122,10,10" ItemsSource="{Binding Path=ListViewItems}" SelectionChanged="ListView_SelectionChanged">
                     <ListView.View>
-                        <GridView>
+                        <GridView x:Uid="GridView_1">
                             <GridView.Columns>
-                                <GridViewColumn Header="Filename (Embedded)" Width="160" DisplayMemberBinding="{Binding Path=FileName}"/>
-                                <GridViewColumn Header="Ext." Width="40" DisplayMemberBinding="{Binding Path=FileExtension}"/>
-                                <GridViewColumn Header="Relative Path" Width="100" DisplayMemberBinding="{Binding Path=Path}"/>
+                                <GridViewColumn x:Uid="GridViewColumn_1" Header="Filename (Embedded)" Width="160" DisplayMemberBinding="{Binding Path=FileName}"/>
+                                <GridViewColumn x:Uid="GridViewColumn_2" Header="Ext." Width="40" DisplayMemberBinding="{Binding Path=FileExtension}"/>
+                                <GridViewColumn x:Uid="GridViewColumn_3" Header="Relative Path" Width="100" DisplayMemberBinding="{Binding Path=Path}"/>
                             </GridView.Columns>
                         </GridView>
                     </ListView.View>
                 </ListView>
 
             </Grid>
-            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
-            <Grid Grid.Column="2" MinWidth="270">
-                <Border  Margin="0,37,0,0" Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
-                    <Viewbox x:Name="imageBoxContainer" Margin="10" ClipToBounds="True">
-                        <Image x:Name="imageBox" />
+            <GridSplitter x:Uid="GridSplitter_1" Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
+            <Grid x:Uid="Grid_4" Grid.Column="2" MinWidth="270">
+                <Border  x:Uid="Border_1" Margin="0,37,0,0" Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
+                    <Viewbox x:Uid="imageBoxContainer" x:Name="imageBoxContainer" Margin="10" ClipToBounds="True">
+                        <Image x:Uid="imageBox" x:Name="imageBox" />
                     </Viewbox>
                 </Border>
-                <TextBox x:Name="textBox" Margin="5,42,5,5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Visibility="Hidden" Padding="5,5,3,5" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
-                <Button x:Name="saveFileButton" Content="Save File" Margin="0,10,10,0" VerticalAlignment="Top" Width="103" IsEnabled="{Binding Path=SaveStatus}" HorizontalAlignment="Right" Click="saveFileButton_Click"/>
-                <Button x:Name="saveAllFilesButton" Content="Save all Files" Margin="0,10,123,0" VerticalAlignment="Top" Width="100" IsEnabled="{Binding Path=SaveAllStatus}" HorizontalAlignment="Right" Click="saveAllFilesButton_Click"/>
-                <Label Content="Preview" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" Width="50" FontWeight="Bold" Padding="5,5,0,5"/>
+                <TextBox x:Uid="textBox" x:Name="textBox" Margin="5,42,5,5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Visibility="Hidden" Padding="5,5,3,5" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
+                <StackPanel x:Uid="StackPanel_1" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Uid="saveFileButton" x:Name="saveFileButton" Content="Save File" Margin="0,10,10,0" VerticalAlignment="Top" IsEnabled="{Binding Path=SaveStatus}" HorizontalAlignment="Right" Click="saveFileButton_Click" Padding="5,1"/>
+                <Button x:Uid="saveAllFilesButton" x:Name="saveAllFilesButton" Content="Save all Files" Margin="0,10,10,0" VerticalAlignment="Top" IsEnabled="{Binding Path=SaveAllStatus}" HorizontalAlignment="Right" Click="saveAllFilesButton_Click" Padding="5,1"/>
+                </StackPanel>
+                <Label x:Uid="Label_3" Content="Preview" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" FontWeight="Bold" Padding="5,5,0,5"/>
                 
             </Grid>
         </Grid>
-        <StatusBar Height="35" VerticalAlignment="Bottom" Grid.ColumnSpan="3">
-            <StatusBarItem HorizontalAlignment="Left">
-                <Label x:Name="statusLabel" Content="{Binding Path=StatusText}" HorizontalContentAlignment="Stretch" Height="35" HorizontalAlignment="Left" Margin="5,0"/>
+        <StatusBar x:Uid="StatusBar_1" Height="35" VerticalAlignment="Bottom" Grid.ColumnSpan="3">
+            <StatusBarItem x:Uid="StatusBarItem_1" HorizontalAlignment="Left">
+                <Label x:Uid="statusLabel" x:Name="statusLabel" Content="{Binding Path=StatusText}" HorizontalContentAlignment="Stretch" Height="35" HorizontalAlignment="Left" Margin="5,0"/>
             </StatusBarItem>
-            <StatusBarItem HorizontalAlignment="Right">
-                <ProgressBar x:Name="progressBar" Height="25" Width="151" Value="{Binding Path=Progress}"/>
+            <StatusBarItem x:Uid="StatusBarItem_2" HorizontalAlignment="Right">
+                <ProgressBar x:Uid="progressBar" x:Name="progressBar" Height="25" Width="151" Value="{Binding Path=Progress}"/>
             </StatusBarItem>
         </StatusBar>
 
