--- a/MediaExtractor/About.xaml
+++ b/MediaExtractor/About.xaml
@@ -1,4 +1,7 @@
-﻿<Window x:Class="MediaExtractor.About"
+﻿<adonisControls:AdonisWindow 
+        x:Class="MediaExtractor.About"
+        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+        xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -39,7 +42,7 @@
 
         </Grid>
         <TextBlock Text="Media Extractor is an application to preview and extract packed media in Microsoft Office files (e.g. Word, PowerPoint or Excel documents) or common archives (e.g. zip, 7z or tar)" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="58" Width="385" TextWrapping="Wrap" FontSize="14"/>
-        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="CloseButton_Click"/>
+        <Button x:Name="AboutCloseButton" Content="Close" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="CloseButton_Click"/>
 
     </Grid>
-</Window>
+</adonisControls:AdonisWindow>
