--- a/MediaExtractor/MainWindow.xaml
+++ b/MediaExtractor/MainWindow.xaml
@@ -1,6 +1,11 @@
-﻿<Window x:Class="MediaExtractor.MainWindow"
+﻿<adonisControls:AdonisWindow
+        x:Class="MediaExtractor.MainWindow"
+        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+        xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local = "clr-namespace:WPFLocalization"
+        xmlns:p = "clr-namespace:WPFLocalization.Properties"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
@@ -15,7 +20,7 @@
             <ColumnDefinition Width="452*"/>
         </Grid.ColumnDefinitions>
         <Menu Height="26" Margin="0,-26,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3">
-            <MenuItem Header="File">
+            <MenuItem Header="{x:Static p:Resources.MenuFile}">
                 <MenuItem x:Name="OpenFileMenuItem" Header="Open File" Click="OpenFileMenuItem_Click" />
                 <MenuItem x:Name="SaveFileMenuItem" Header="Save File" Click="SaveFileMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=SaveFileButton}" />
                 <MenuItem x:Name="SaveAllFilesMenuItem" Header="Save all Files" Click="SaveAllFilesMenuItem_Click" IsEnabled="{Binding IsEnabled, ElementName=SaveAllFilesButton}" />
@@ -88,4 +93,4 @@
         </StatusBar>
 
     </Grid>
-</Window>
+</adonisControls:AdonisWindow>
